<resources>
    <string name="app_name">Curso Moviles</string>
    <string name="text_Username">Username</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Password</string>
    <string name="text_Login">Login</string>
    <string name="text_Welcome">Welcome to our catalog</string>
    <string name="text_User">Saray</string>
    <string name="text_IceCones">Ice Creame Cones</string>
    <string name="text_Description_Cones">Delicious cone ice creams with pulp of your favorite fruit</string>
    <string name="text_IceCups">Ice Creame Cups</string>
    <string name="text_Description_IceCups">ice creams with 6 special motifs</string>
    <string name="text_Search">Search</string>
    <string name="text_Settings">Settings</string>
    <string name="text_Logout">Logout</string>
    <string name="text_Order_Cones">Order Cones</string>
    <string name="text_Order_Cups">Order Cups</string>
    <string name="text_Buy_Chocolate">Buy Chocolate</string>
    <string name="text_Buy_Cherry">Buy Cherry</string>
    <string name="text_Buy_Strawberry">Buy Strawberry</string>
    <string name="text_Buy_Orange">Buy Orange</string>
    <string name="text_Buy_Apple">Buy Apple</string>
    <string name="text_Buy_Grape">Buy Grape</string>
    <string name="text_Buy_Delice">Buy Delice Cup</string>
    <string name="text_Buy_Exotic">Buy Exotic Cup</string>
    <string name="text_Buy_Redfruit">Buy Red Fruit Cup</string>
    <string name="text_Buy_Temptation">Buy Temptation Cup</string>
    <string name="text_Buy_Shildish">Buy Shildish Cup</string>
    <string name="text_Buy_Decorate">Buy Decorate Cup</string>
    <string name="text_Print_invoice">Print Invoice</string>
    <string name="text_Place_another_order">Place Another Order</string>
    <string name="text_Return">Return</string>
    <string name="text_Invoice_Fragment_Detail">Ice Cream Shop, Thank you for your purchase</string>
    <string name="text_Total_Sale">Total Sale: $</string>
    <string name="text_Come_back">Come Back Soom</string>
    <string name="text_Developed_by">Developed by Saray</string>


</resources>