<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="DetailFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icecream">
    </ImageView>

    <TextView
        android:id="@+id/textViewThank_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/text_Invoice_Fragment_Detail">

    </TextView>

    <TextView
        android:id="@+id/textViewTotal_Sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:text="@string/text_Total_Sale"
        android:textColor="@color/black">

    </TextView>

    <TextView
        android:id="@+id/textViewCome_Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:text="@string/text_Come_back"
        android:textColor="@color/black">

    </TextView>

</LinearLayout>